[project]
name = "infovar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bottle>=0.13.4",
    "fastapi>=0.135.2",
    "pysam>=0.23.3",
    "python-multipart>=0.0.22",
    "requests>=2.33.1",
    "uvicorn>=0.42.0",
]
